poc-wordpress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: wordpress
  namespace: wordpresspoc
spec:
  rules:
    - host: cuidando-temp.luuna.mx
      http:
        paths:
          - backend:
              service:
                name: wordpress
                port:
                  number: 80
            path: /
            pathType: ImplementationSpecific
